--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body::before {
     right: 0;
     bottom: 0;
   
-    background-image: url(img/2.jpg);
+    background-image: url(2.jpg);
     background-size: cover;
   
     filter: blur(3px);
